--- a/_scss/screen.scss
+++ b/_scss/screen.scss
@@ -1,8 +1,22 @@
 @import 'base';
 
 canvas{
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
- 	width: 1200px;
+   width: 1350px;
+   height: 690px;
+   position: relative;
+   display: inline;
+   
+}
+
+html{
+	height: 100%;
+	width: 100%;
+}
+
+body{
+	text-align: center;
+	height: 100%;
+	width: 100%;
+	background-color: black;
+	border: 16px yellow solid;
 }
